# notedeck-vid

./: .gitignore  .gitignore.bak  CHANGELOG.md  Cargo.toml
.beads/: issues.jsonl
.cargo/: config.toml
.github/workflows/: rust.yml
crates/enostr/src/: pubkey.rs
crates/enostr/src/relay/: message.rs  pool.rs
crates/notedeck/: Cargo.toml
crates/notedeck/src/: app.rs  fonts.rs  imgcache.rs  lib.rs  time.rs  ui.rs  unknowns.rs  urls.rs
crates/notedeck/src/jobs/: job_pool.rs
crates/notedeck/src/media/: action.rs  android_video.rs  audio.rs  audio_decoder.rs  avfoundation_compat.rs  frame_queue.rs  images.rs  latest.rs  linux_video.rs  linux_video_gst.rs  macos_video.rs  mod.rs  network.rs  video.rs  video.wgsl  video_controls.rs  video_decoder.rs  video_player.rs  video_texture.rs
crates/notedeck/src/persist/: app_size.rs
crates/notedeck/src/platform/: mod.rs
crates/notedeck/src/storage/: account_storage.rs  file_storage.rs
crates/notedeck/src/zaps/: networking.rs
crates/notedeck_chrome/: Cargo.toml
crates/notedeck_chrome/android/app/: build.gradle
crates/notedeck_chrome/android/app/src/main/java/com/damus/notedeck/video/: ExoPlayerBridge.java  FrameExtractor.java
crates/notedeck_chrome/src/: chrome.rs  notedeck.rs
crates/notedeck_columns/src/: app.rs  deck_state.rs  nav.rs  post.rs  route.rs  test_utils.rs
crates/notedeck_columns/src/timeline/: thread.rs
crates/notedeck_columns/src/ui/: add_column.rs  relay.rs  settings.rs  side_panel.rs  timeline.rs
crates/notedeck_columns/src/ui/column/: header.rs
crates/notedeck_columns/src/ui/note/: custom_zap.rs  post.rs
crates/notedeck_messages/src/ui/: nav.rs
crates/notedeck_ui/docs/: README.md  components.md
crates/notedeck_ui/src/: context_menu.rs  nip51_set.rs
crates/notedeck_ui/src/media/: viewer.rs
crates/notedeck_ui/src/note/: context.rs  media.rs
crates/notedeck_ui/src/profile/: context.rs
