[workspace]
resolver = "2"
package.version = "0.7.1"
members = [
    "crates/notedeck",
    "crates/notedeck_chrome",
    "crates/notedeck_columns",
    "crates/notedeck_dave",
    "crates/notedeck_messages",
    "crates/notedeck_notebook",
    "crates/notedeck_ui",
    "crates/notedeck_clndash",

    "crates/enostr", "crates/tokenator", "crates/notedeck_dave", "crates/notedeck_ui", "crates/notedeck_clndash",
]

[workspace.dependencies]
opener = "0.8.2"
chrono = "0.4.40" 
base32 = "0.4.0"
base64 = "0.22.1"
rmpv = "1.3.0"
rand = "0.9.2"
bech32 = { version = "0.11", default-features = false }
bitflags = "2.5.0"
dirs = "5.0.1"
eframe = { version = "0.33.3", default-features = false, features = [ "wgpu", "wayland", "x11", "android-game-activity" ] }
egui = { version = "0.33.3", features = ["serde"] }
egui-wgpu = "0.33.3"
egui_extras = { version = "0.33.3", features = ["all_loaders"] }
egui-winit = { version = "0.33.3", features = ["android-game-activity", "clipboard"] }
egui_nav = { git = "https://github.com/alltheseas/egui-nav", rev = "81ac7f0758bae3e24425fba83981b2a73895e9cf" }
egui_tabs = { git = "https://github.com/alltheseas/egui-tabs", rev = "3f2fe861c75d29c434f8484002040589cb90871d" }
egui_virtual_list = { git = "https://github.com/alltheseas/hello_egui", rev = "2e7eff09670081280ea20e45d874fb28dee77620" }
ehttp = "0.5.0"
hyper = { version = "1.7.0", features = ["full"] }
hyper-util = {version = "0.1" , features = ["tokio"]}
hyper-rustls = "0.27.7"
http-body-util = "0.1.3"
rustls = "0.23.28"
enostr = { path = "crates/enostr" } 
ewebsock = { version = "0.2.0", features = ["tls"] }
fluent = "0.17.0"
fluent-resmgr = "0.0.8"
fluent-langneg = "0.13"
hex = { version = "0.4.3", features = ["serde"] }
image = { version = "0.25", features = ["jpeg", "png", "webp"] }
indexmap = "2.6.0"
log = "0.4.17"
md5 = "0.7.0"
nostr = { version = "0.37.0", default-features = false, features = ["std", "nip44", "nip49"] }
nwc = "0.39.0"
mio = { version = "1.0.3", features = ["os-poll", "net"] }
nostrdb = { git = "https://github.com/damus-io/nostrdb-rs", rev = "8148dd3cea9bc8ff0bc510c720d0c51f327a0a1a" }
#nostrdb = "0.6.1"
notedeck = { path = "crates/notedeck" }
notedeck_chrome = { path = "crates/notedeck_chrome" }
notedeck_clndash = { path = "crates/notedeck_clndash" }
notedeck_columns = { path = "crates/notedeck_columns" }
notedeck_dave = { path = "crates/notedeck_dave" }
notedeck_messages = { path = "crates/notedeck_messages" }
notedeck_notebook = { path = "crates/notedeck_notebook" }
notedeck_ui = { path = "crates/notedeck_ui" }
tokenator = { path = "crates/tokenator" }
once_cell = "1.19.0"
robius-open = "0.1"
poll-promise = { version = "0.3.0", features = ["tokio"] }
puffin = { git = "https://github.com/jb55/puffin", package = "puffin", rev = "c6a6242adaf90b6292c0f462d2acd34d96d224d2" }
puffin_egui = { git = "https://github.com/jb55/puffin", package = "puffin_egui", rev = "c6a6242adaf90b6292c0f462d2acd34d96d224d2" }
serde = { version = "1", features = ["derive"] } # You only need this if you want app persistence
serde_derive = "1"
serde_json = "1.0.89"
strum = "0.26"
strum_macros = "0.26"
thiserror = "2.0.7"
tokio = { version = "1.16", features = ["macros", "rt-multi-thread", "fs"] }
tracing = { version = "0.1.40", features = ["log"] }
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tempfile = "3.13.0"
unic-langid = { version = "0.9.6", features = ["macros"] }
url = "2.5.2"
urlencoding = "2.1.3"
uuid = { version = "1.10.0", features = ["v4"] }
sha2 = "0.10.8"
bincode = "1.3.3"
mime_guess = "2.0.5"
pretty_assertions = "1.4.1"
jni = "0.21.1"
profiling = "1.0"
lightning-invoice = { version = "0.33.1", features = ["serde"] }
secp256k1 = "0.30.0"
hashbrown = "0.15.2"
openai-api-rs = "6.0.3"
re_memory = "0.23.4"
oot_bitset = "0.1.1"
blurhash = "0.2.3"
android-activity = { git = "https://github.com/damus-io/android-activity", rev = "4ee16f1585e4a75031dc10785163d4b920f95805", features = [ "game-activity" ] }
keyring = { version = "3.6.3", features = ["apple-native", "windows-native", "linux-native-sync-persistent", "vendored"] }
android-keyring = "0.2.0"

[profile.small]
inherits = 'release'
opt-level = 'z'     # Optimize for size
lto = true          # Enable link-time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary*


[patch.crates-io]
# egui 0.33.3 with kernelkind Android/IME patches (alltheseas/egui notedeck-0.33 branch)
egui = { git = "https://github.com/alltheseas/egui", rev = "0c56809bbbeefe9e2341414b0ce210e095101aa3" }
eframe = { git = "https://github.com/alltheseas/egui", rev = "0c56809bbbeefe9e2341414b0ce210e095101aa3" }
egui-winit = { git = "https://github.com/alltheseas/egui", rev = "0c56809bbbeefe9e2341414b0ce210e095101aa3" }
egui-wgpu = { git = "https://github.com/alltheseas/egui", rev = "0c56809bbbeefe9e2341414b0ce210e095101aa3" }
egui_extras = { git = "https://github.com/alltheseas/egui", rev = "0c56809bbbeefe9e2341414b0ce210e095101aa3" }
epaint = { git = "https://github.com/alltheseas/egui", rev = "0c56809bbbeefe9e2341414b0ce210e095101aa3" }
emath = { git = "https://github.com/alltheseas/egui", rev = "0c56809bbbeefe9e2341414b0ce210e095101aa3" }
ecolor = { git = "https://github.com/alltheseas/egui", rev = "0c56809bbbeefe9e2341414b0ce210e095101aa3" }

puffin = { git = "https://github.com/jb55/puffin", package = "puffin", rev = "c6a6242adaf90b6292c0f462d2acd34d96d224d2" }
puffin_egui = { git = "https://github.com/jb55/puffin", package = "puffin_egui", rev = "c6a6242adaf90b6292c0f462d2acd34d96d224d2" }
