[package]
name = "notedeck"
version = { workspace = true }
edition = "2021"
description = "The APIs and data structures used by notedeck apps"

[dependencies]
nostrdb = { workspace = true }
jni = { workspace = true }
url = { workspace = true }
strum = { workspace = true }
blurhash = { workspace = true }
strum_macros = { workspace = true }
dirs = { workspace = true }
enostr = { workspace = true }
nostr = { workspace = true }
egui = { workspace = true }
egui_extras = { workspace = true }
eframe = { workspace = true }
image = { workspace = true }
base32 = { workspace = true }
poll-promise = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
hex = { workspace = true }
thiserror = { workspace = true }
puffin = { workspace = true, optional = true }
puffin_egui = { workspace = true, optional = true }
sha2 = { workspace = true }
bincode = { workspace = true }
ehttp = {workspace = true }
mime_guess = { workspace = true }
egui-winit = { workspace = true }
tokenator = { workspace = true }
profiling = { workspace = true }
nwc = { workspace = true }
tokio = { workspace = true }
bech32 = { workspace = true }
lightning-invoice = { workspace = true }
secp256k1 = { workspace = true }
hashbrown = { workspace = true }
fluent = { workspace = true }
fluent-resmgr = { workspace = true }
fluent-langneg = { workspace = true }
unic-langid = { workspace = true }
once_cell = { workspace = true }
md5 = { workspace = true }
bitflags = { workspace = true }
regex = "1"
chrono = { workspace = true }
indexmap = {workspace = true}
rand = {workspace = true}
crossbeam-channel = "0.5"
crossbeam = "0.8.4"
bytemuck = { version = "1.14", features = ["derive"] }
egui-wgpu = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
http-body-util = { workspace = true }
hyper-rustls = { workspace = true }
rustls = { workspace = true }
keyring = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true }

[target.'cfg(target_os = "android")'.dependencies]
jni = { workspace = true }
android-activity = { workspace = true }
ndk-context = "0.1"
webpki-roots = { workspace = true }

[target.'cfg(not(target_os = "android"))'.dependencies]
ffmpeg-next = { workspace = true, optional = true }
rodio = { workspace = true, optional = true }

# Linux native VAAPI decoder (alternative to FFmpeg)
[target.'cfg(target_os = "linux")'.dependencies]
cros-codecs = { version = "0.0.6", features = ["vaapi"], optional = true }
matroska-demuxer = { version = "0.5", optional = true }
mp4 = { version = "0.14", optional = true }
tempfile = { workspace = true, optional = true }
# GStreamer-based video decoder (recommended for Linux)
gstreamer = { version = "0.24", optional = true }
gstreamer-app = { version = "0.24", optional = true }
gstreamer-video = { version = "0.24", optional = true }

# macOS native AVFoundation/VideoToolbox decoder
#
# CURRENTLY DISABLED due to objc2 version conflict:
# - winit 0.30.x (used by egui) requires objc2 0.5.x
# - objc2-av-foundation requires objc2 0.6.x
# - These are ABI-incompatible at runtime, causing crashes
#
# WORKAROUND: FFmpeg with VideoToolbox HW acceleration is used instead.
# This still provides GPU-accelerated decoding, just with slightly more overhead.
#
# WHEN FIXED: Once egui upgrades to winit 0.31.x (which uses objc2 0.6.x),
# this feature can be enabled. Track: https://github.com/rust-windowing/winit/issues/4307
#
# To enable (once ecosystem updates): cargo build --features macos-native-video
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = { workspace = true, optional = true }
objc2-foundation = { workspace = true, optional = true }
objc2-av-foundation = { workspace = true, optional = true }
objc2-core-media = { workspace = true, optional = true }
objc2-core-video = { workspace = true, optional = true }
objc2-video-toolbox = { workspace = true, optional = true }
block2 = { workspace = true, optional = true }
objc2-core-foundation = { version = "0.3", features = ["CFNumber", "CFDictionary", "CFString"], optional = true }

[features]
puffin = ["puffin_egui", "dep:puffin"]
debug-widget-callstack = ["egui/callstack"]
debug-interactive-widgets = []
ffmpeg = ["ffmpeg-next", "rodio"]
# Linux native VAAPI decoder using cros-codecs (no FFmpeg dependency)
linux-native-video = ["cros-codecs", "matroska-demuxer", "mp4", "tempfile"]
# Linux GStreamer-based video decoder (recommended - handles edge cases better)
linux-gstreamer-video = ["gstreamer", "gstreamer-app", "gstreamer-video"]
# Native macOS AVFoundation video decoder - DISABLED until egui updates to winit 0.31.x
# See crates/notedeck/src/media/macos_video.rs for details on the objc2 version conflict
macos-native-video = [
    "objc2",
    "objc2-foundation",
    "objc2-av-foundation",
    "objc2-core-media",
    "objc2-core-video",
    "objc2-video-toolbox",
    "block2",
    "objc2-core-foundation",
]
